--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.10",
+    "@react-three/drei": "^9.56.11",
+    "@react-three/fiber": "^8.13.7",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,9 +22,7 @@
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "three": "^0.155.0",
-    "@react-three/fiber": "^8.13.7",
-    "@react-three/drei": "^9.56.11"
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
